tests/fail/if_then_else_without_valued_condition.tig
if break then 0 else 1
