tests/fail/if_then_else_without_valued_condition.err
Semantic Error: break used out of a while or for statement at line 1.
Semantic Error: The condition of the if-then-else statement at line 1 does not return a value.
